--- a/TodoBackend/src/Freya.TodoBackend/Freya.TodoBackend.fsproj
+++ b/TodoBackend/src/Freya.TodoBackend/Freya.TodoBackend.fsproj
@@ -61,75 +61,75 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Chiron">
-      <HintPath>..\..\packages\Chiron.5.2.1\lib\net45\Chiron.dll</HintPath>
-    </Reference>
     <Reference Include="FParsec">
       <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
     </Reference>
     <Reference Include="FParsecCS">
       <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
     </Reference>
-    <Reference Include="Hekate">
-      <HintPath>..\..\packages\Hekate.1.0.1\lib\net40\Hekate.dll</HintPath>
-    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <Reference Include="Suave">
-      <HintPath>..\..\packages\Suave.0.33.0\lib\net40\Suave.dll</HintPath>
-    </Reference>
     <Reference Include="FSharp.Core">
       <HintPath>..\..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Freya.Core">
-      <HintPath>..\..\packages\Freya.Core.2.0.200\lib\net45\Freya.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Lenses.Http">
-      <HintPath>..\..\packages\Freya.Lenses.Http.2.0.200\lib\net45\Freya.Lenses.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Lenses.Http.Cors">
-      <HintPath>..\..\packages\Freya.Lenses.Http.Cors.2.0.200\lib\net45\Freya.Lenses.Http.Cors.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Recorder">
-      <HintPath>..\..\packages\Freya.Recorder.2.0.200\lib\net45\Freya.Recorder.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Machine">
-      <HintPath>..\..\packages\Freya.Machine.2.0.200\lib\net45\Freya.Machine.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Machine.Extensions.Http">
-      <HintPath>..\..\packages\Freya.Machine.Extensions.Http.2.0.200\lib\net45\Freya.Machine.Extensions.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Machine.Extensions.Http.Cors">
-      <HintPath>..\..\packages\Freya.Machine.Extensions.Http.Cors.2.0.200\lib\net45\Freya.Machine.Extensions.Http.Cors.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Router">
-      <HintPath>..\..\packages\Freya.Router.2.0.200\lib\net45\Freya.Router.dll</HintPath>
-    </Reference>
-    <Reference Include="Freya.Machine.Router">
-      <HintPath>..\..\packages\Freya.Machine.Router.2.0.200\lib\net45\Freya.Machine.Router.dll</HintPath>
-    </Reference>
-    <Reference Include="Arachne.Core">
-      <HintPath>..\..\packages\Arachne.Core.2.3.26\lib\net45\Arachne.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Arachne.Uri">
-      <HintPath>..\..\packages\Arachne.Uri.2.3.26\lib\net45\Arachne.Uri.dll</HintPath>
-    </Reference>
-    <Reference Include="Arachne.Uri.Template">
-      <HintPath>..\..\packages\Arachne.Uri.Template.2.3.26\lib\net45\Arachne.Uri.Template.dll</HintPath>
-    </Reference>
-    <Reference Include="Arachne.Language">
-      <HintPath>..\..\packages\Arachne.Language.2.3.26\lib\net45\Arachne.Language.dll</HintPath>
-    </Reference>
-    <Reference Include="Arachne.Http">
-      <HintPath>..\..\packages\Arachne.Http.2.3.26\lib\net45\Arachne.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="Arachne.Http.Cors">
-      <HintPath>..\..\packages\Arachne.Http.Cors.2.3.26\lib\net45\Arachne.Http.Cors.dll</HintPath>
+    <Reference Include="Suave">
+      <HintPath>..\..\packages\Suave.1.1.0\lib\net40\Suave.dll</HintPath>
     </Reference>
     <Reference Include="Aether">
-      <HintPath>..\..\packages\Aether.7.0.2\lib\net35\Aether.dll</HintPath>
+      <HintPath>..\..\packages\Aether.8.0.2\lib\net35\Aether.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Core">
+      <HintPath>..\..\packages\Freya.Core.3.0.0-b288\lib\net45\Freya.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Arachne.Core">
+      <HintPath>..\..\packages\Arachne.Core.3.0.0-b100\lib\net40\Arachne.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Arachne.Language">
+      <HintPath>..\..\packages\Arachne.Language.3.0.0-b100\lib\net40\Arachne.Language.dll</HintPath>
+    </Reference>
+    <Reference Include="Arachne.Uri">
+      <HintPath>..\..\packages\Arachne.Uri.3.0.0-b100\lib\net40\Arachne.Uri.dll</HintPath>
+    </Reference>
+    <Reference Include="Arachne.Http">
+      <HintPath>..\..\packages\Arachne.Http.3.0.0-b100\lib\net40\Arachne.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Lenses.Http">
+      <HintPath>..\..\packages\Freya.Lenses.Http.3.0.0-b288\lib\net45\Freya.Lenses.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="Arachne.Http.Cors">
+      <HintPath>..\..\packages\Arachne.Http.Cors.3.0.0-b100\lib\net40\Arachne.Http.Cors.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Lenses.Http.Cors">
+      <HintPath>..\..\packages\Freya.Lenses.Http.Cors.3.0.0-b288\lib\net45\Freya.Lenses.Http.Cors.dll</HintPath>
+    </Reference>
+    <Reference Include="Hekate">
+      <HintPath>..\..\packages\Hekate.3.0.0\lib\net35\Hekate.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Recorder">
+      <HintPath>..\..\packages\Freya.Recorder.3.0.0-b288\lib\net45\Freya.Recorder.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Machine">
+      <HintPath>..\..\packages\Freya.Machine.3.0.0-b288\lib\net45\Freya.Machine.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Machine.Extensions.Http">
+      <HintPath>..\..\packages\Freya.Machine.Extensions.Http.3.0.0-b288\lib\net45\Freya.Machine.Extensions.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Machine.Extensions.Http.Cors">
+      <HintPath>..\..\packages\Freya.Machine.Extensions.Http.Cors.3.0.0-b288\lib\net45\Freya.Machine.Extensions.Http.Cors.dll</HintPath>
+    </Reference>
+    <Reference Include="Arachne.Uri.Template">
+      <HintPath>..\..\packages\Arachne.Uri.Template.3.0.0-b100\lib\net40\Arachne.Uri.Template.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Router">
+      <HintPath>..\..\packages\Freya.Router.3.0.0-b288\lib\net45\Freya.Router.dll</HintPath>
+    </Reference>
+    <Reference Include="Freya.Machine.Router">
+      <HintPath>..\..\packages\Freya.Machine.Router.3.0.0-b288\lib\net45\Freya.Machine.Router.dll</HintPath>
+    </Reference>
+    <Reference Include="Chiron">
+      <HintPath>..\..\packages\Chiron.6.0.1\lib\net40\Chiron.dll</HintPath>
     </Reference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
