--- a/TodoBackend/src/Freya.TodoBackend/packages.config
+++ b/TodoBackend/src/Freya.TodoBackend/packages.config
@@ -1,25 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aether" version="7.0.2" targetFramework="net45" />
-  <package id="Arachne.Core" version="2.3.26" targetFramework="net45" />
-  <package id="Arachne.Http" version="2.3.26" targetFramework="net45" />
-  <package id="Arachne.Http.Cors" version="2.3.26" targetFramework="net45" />
-  <package id="Arachne.Language" version="2.3.26" targetFramework="net45" />
-  <package id="Arachne.Uri" version="2.3.26" targetFramework="net45" />
-  <package id="Arachne.Uri.Template" version="2.3.26" targetFramework="net45" />
-  <package id="Chiron" version="5.2.1" targetFramework="net45" />
+  <package id="Aether" version="8.0.2" targetFramework="net45" />
+  <package id="Arachne.Core" version="3.0.0-b100" targetFramework="net45" />
+  <package id="Arachne.Http" version="3.0.0-b100" targetFramework="net45" />
+  <package id="Arachne.Http.Cors" version="3.0.0-b100" targetFramework="net45" />
+  <package id="Arachne.Language" version="3.0.0-b100" targetFramework="net45" />
+  <package id="Arachne.Uri" version="3.0.0-b100" targetFramework="net45" />
+  <package id="Arachne.Uri.Template" version="3.0.0-b100" targetFramework="net45" />
+  <package id="Chiron" version="6.0.1" targetFramework="net45" />
   <package id="FParsec" version="1.0.2" targetFramework="net45" />
-  <package id="Freya" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Core" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Lenses.Http" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Lenses.Http.Cors" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Machine" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Machine.Extensions.Http" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Machine.Extensions.Http.Cors" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Machine.Router" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Recorder" version="2.0.200" targetFramework="net45" />
-  <package id="Freya.Router" version="2.0.200" targetFramework="net45" />
+  <package id="Freya" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Core" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Lenses.Http" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Lenses.Http.Cors" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Machine" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Machine.Extensions.Http" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Machine.Extensions.Http.Cors" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Machine.Router" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Recorder" version="3.0.0-b288" targetFramework="net45" />
+  <package id="Freya.Router" version="3.0.0-b288" targetFramework="net45" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
-  <package id="Hekate" version="1.0.1" targetFramework="net45" />
-  <package id="Suave" version="0.33.0" targetFramework="net45" />
+  <package id="Hekate" version="3.0.0" targetFramework="net45" />
+  <package id="Suave" version="1.1.0" targetFramework="net45" />
 </packages>
