--- a/TodoBackend/src/Freya.TodoBackend/Freya.TodoBackend.fsproj
+++ b/TodoBackend/src/Freya.TodoBackend/Freya.TodoBackend.fsproj
@@ -77,14 +77,8 @@
     <Reference Include="Suave">
       <HintPath>..\..\packages\Suave.1.1.0\lib\net40\Suave.dll</HintPath>
     </Reference>
-    <Reference Include="Hekate">
-      <HintPath>..\..\packages\Hekate.3.0.0\lib\net35\Hekate.dll</HintPath>
-    </Reference>
     <Reference Include="Chiron">
       <HintPath>..\..\packages\Chiron.6.0.1\lib\net40\Chiron.dll</HintPath>
-    </Reference>
-    <Reference Include="Aether">
-      <HintPath>..\..\packages\Aether.8.1.0\lib\net35\Aether.dll</HintPath>
     </Reference>
     <Reference Include="Freya.Core">
       <HintPath>..\..\packages\Freya.Core.3.0.0-b290\lib\net45\Freya.Core.dll</HintPath>
@@ -130,6 +124,24 @@
     </Reference>
     <Reference Include="Freya.Machine.Router">
       <HintPath>..\..\packages\Freya.Machine.Router.3.0.0-b290\lib\net45\Freya.Machine.Router.dll</HintPath>
+    </Reference>
+    <Reference Include="Aether">
+      <HintPath>..\..\packages\Aether.8.1.1\lib\net35\Aether.dll</HintPath>
+    </Reference>
+    <Reference Include="Hekate">
+      <HintPath>..\..\packages\Hekate.3.2.0\lib\net35\Hekate.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Hosting">
+      <HintPath>..\..\packages\Microsoft.Owin.Hosting.3.0.1\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.HttpListener">
+      <HintPath>..\..\packages\Microsoft.Owin.Host.HttpListener.3.0.1\lib\net45\Microsoft.Owin.Host.HttpListener.dll</HintPath>
     </Reference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
