--- a/StaticFileServer/src/StaticFileServer/StaticFileServer.fsproj
+++ b/StaticFileServer/src/StaticFileServer/StaticFileServer.fsproj
@@ -65,11 +65,19 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Aether">
+      <HintPath>..\..\packages\Aether.8.1.2\lib\net35\Aether.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FParsec">
       <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
     </Reference>
     <Reference Include="FParsecCS">
       <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
+    </Reference>
+    <Reference Include="Hekate">
+      <HintPath>..\..\packages\Hekate.3.2.0\lib\net35\Hekate.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
@@ -77,9 +85,6 @@
     <Reference Include="System.Numerics" />
     <Reference Include="FSharp.Core">
       <HintPath>..\..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Aether">
-      <HintPath>..\..\packages\Aether.8.1.0\lib\net35\Aether.dll</HintPath>
     </Reference>
     <Reference Include="Freya.Core">
       <HintPath>..\..\packages\Freya.Core.3.0.0-b290\lib\net45\Freya.Core.dll</HintPath>
@@ -104,9 +109,6 @@
     </Reference>
     <Reference Include="Freya.Lenses.Http.Cors">
       <HintPath>..\..\packages\Freya.Lenses.Http.Cors.3.0.0-b290\lib\net45\Freya.Lenses.Http.Cors.dll</HintPath>
-    </Reference>
-    <Reference Include="Hekate">
-      <HintPath>..\..\packages\Hekate.3.0.0\lib\net35\Hekate.dll</HintPath>
     </Reference>
     <Reference Include="Freya.Recorder">
       <HintPath>..\..\packages\Freya.Recorder.3.0.0-b290\lib\net45\Freya.Recorder.dll</HintPath>
